Make JDK 11 compatible, add instructions to create an application bundle using jpackager.